fix: visibility of Header items

--- a/src/app/components/HamburgerMenu/HamburgerMenu.styles.module.css
+++ b/src/app/components/HamburgerMenu/HamburgerMenu.styles.module.css
@@ -3,8 +3,19 @@
   right: 0; /* Verschiebt das Menü nach rechts */
   z-index: 1;
   display: flex;
-  @apply xl:hidden;
+
+  
 }
+
+@media screen and (min-width: 960px) {
+  .menuWrap {
+  display: none;
+
+  }
+  
+}
+
+  
 
 .toggler {
   position: absolute;
